# robotESP32

./: .clang-format  .gitignore  HISTORY.md  platformio.ini  pyproject.toml
cli/: README_BLACKBOX.md  __init__.py  params.json  parse_blackbox.py  rp_cli.py
docs/: RP-Passthrough.md  STM32-ESP32-Comms.md
src/: GamepadMenuIn.cpp  GamepadMenuIn.h  RpPassthrough.cpp  RpPassthrough.h  Stm32Link.cpp  Stm32Link.h  TeleopInput.cpp  TeleopInput.h  config_pins.h  main.cpp  rp_passthrough_config.h
src/ui/: menu_ui.cpp  menu_ui.h
tools/: gen_params_json.c  gen_params_json.py  param_map.def  pio_gen_params.py
