[tool.poetry]
name = "rp-cli"
version = "0.1.0"
description = "Robot Protocol passthrough CLI"
authors = ["Robot2Wheel contributors"]
packages = [{ include = "cli" }]
include = ["cli/params.json"]

[tool.poetry.dependencies]
python = "^3.10"
matplotlib = "^3.10.8"

[tool.poetry.scripts]
rp-cli = "cli.rp_cli:main"
analyse = "cli.parse_blackbox:main"


[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
